--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
-trigger-build.sh
-run.sh
-vars
-tests/
 build.sh
-
+config/
+data/
+Dockerfile.dev
+.env
+.shell-vars
+start-backup.sh
+tests/
+trigger-build.sh
+vars
+.volumes
