--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -58,7 +58,7 @@ msg['Subject'] = "📦 GitHub Actions - Build terminata: ${{ job.status }}"
 msg['From'] = "${{ secrets.SMTP_FROM }}"
 msg['To'] = "${{ secrets.SMTP_TO }}"
 
-msg.set_content(f"""
+msg.set_content(f'''
 Il workflow del repository '${{ github.repository }}' è terminato con stato: ${{ job.status }}
 
 🔗 Azione: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
@@ -67,7 +67,7 @@ Dettagli:
 - Commit: ${{ github.sha }}
 - Autore: ${{ github.actor }}
 - Job: ${{ github.workflow }}
-""")
+''')
 
 report_path = Path("trivy-report.html")
 if report_path.exists():
