--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -46,20 +46,18 @@ jobs:
       - name: Send email with Trivy report attached
         if: always()
         run: |
-          echo "Sending email with attachment..."
-          python3 <<EOF
-import smtplib
-from email.message import EmailMessage
+          echo 'import smtplib
 import ssl
+from email.message import EmailMessage
 from pathlib import Path
 
 msg = EmailMessage()
-msg['Subject'] = "📦 GitHub Actions - Build terminata: ${{ job.status }}"
-msg['From'] = "${{ secrets.SMTP_FROM }}"
-msg['To'] = "${{ secrets.SMTP_TO }}"
+msg["Subject"] = "📦 GitHub Actions - Build terminata: ${{ job.status }}"
+msg["From"] = "${{ secrets.SMTP_FROM }}"
+msg["To"] = "${{ secrets.SMTP_TO }}"
 
-msg.set_content(f'''
-Il workflow del repository '${{ github.repository }}' è terminato con stato: ${{ job.status }}
+msg.set_content("""\
+Il workflow del repository \'${{ github.repository }}\' è terminato con stato: ${{ job.status }}
 
 🔗 Azione: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
 
@@ -67,7 +65,7 @@ Dettagli:
 - Commit: ${{ github.sha }}
 - Autore: ${{ github.actor }}
 - Job: ${{ github.workflow }}
-''')
+""")
 
 report_path = Path("trivy-report.html")
 if report_path.exists():
@@ -85,4 +83,6 @@ context = ssl.create_default_context()
 with smtplib.SMTP_SSL("${{ secrets.SMTP_HOST }}", int("${{ secrets.SMTP_PORT }}"), context=context) as smtp:
     smtp.login("${{ secrets.SMTP_USER }}", "${{ secrets.SMTP_PASSWORD }}")
     smtp.send_message(msg)
-EOF
+' > send_report.py
+
+          python3 send_report.py
