--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -46,44 +46,25 @@ jobs:
       - name: Send email with Trivy report attached
         if: always()
         run: |
-          cat <<EOF > send_report.py
-import smtplib
-import ssl
-from email.message import EmailMessage
-from pathlib import Path
+          echo "import smtplib" > send_email.py
+          echo "import ssl" >> send_email.py
+          echo "from email.message import EmailMessage" >> send_email.py
+          echo "from pathlib import Path" >> send_email.py
+          echo "" >> send_email.py
+          echo "msg = EmailMessage()" >> send_email.py
+          echo "msg['Subject'] = '📦 GitHub Actions - Build terminata: ${{ job.status }}'" >> send_email.py
+          echo "msg['From'] = '${{ secrets.SMTP_FROM }}'" >> send_email.py
+          echo "msg['To'] = '${{ secrets.SMTP_TO }}'" >> send_email.py
+          echo "msg.set_content('''Il workflow del repository \"${{ github.repository }}\" è terminato con stato: ${{ job.status }}\n\n🔗 Azione: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}\n\nCommit: ${{ github.sha }}\nAutore: ${{ github.actor }}\nJob: ${{ github.workflow }}''')" >> send_email.py
+          echo "" >> send_email.py
+          echo "report_path = Path('trivy-report.html')" >> send_email.py
+          echo "if report_path.exists():" >> send_email.py
+          echo "    with report_path.open('rb') as f:" >> send_email.py
+          echo "        msg.add_attachment(f.read(), maintype='text', subtype='html', filename='trivy-report.html')" >> send_email.py
+          echo "" >> send_email.py
+          echo "context = ssl.create_default_context()" >> send_email.py
+          echo "with smtplib.SMTP_SSL('${{ secrets.SMTP_HOST }}', int('${{ secrets.SMTP_PORT }}'), context=context) as smtp:" >> send_email.py
+          # echo "    smtp.login('${{ secrets.SMTP_USER }}', '${{ secrets.SMTP_PASSWORD }}')" >> send_email.py
+          echo "    smtp.send_message(msg)" >> send_email.py
 
-msg = EmailMessage()
-msg["Subject"] = "📦 GitHub Actions - Build terminata: ${{ job.status }}"
-msg["From"] = "${{ secrets.SMTP_FROM }}"
-msg["To"] = "${{ secrets.SMTP_TO }}"
-
-msg.set_content("""\
-Il workflow del repository '${{ github.repository }}' è terminato con stato: ${{ job.status }}
-
-🔗 Azione: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
-
-Dettagli:
-- Commit: ${{ github.sha }}
-- Autore: ${{ github.actor }}
-- Job: ${{ github.workflow }}
-""")
-
-report_path = Path("trivy-report.html")
-if report_path.exists():
-    with report_path.open("rb") as f:
-        msg.add_attachment(
-            f.read(),
-            maintype="text",
-            subtype="html",
-            filename="trivy-report.html"
-        )
-else:
-    print("⚠️ Nessun report trovato.")
-
-context = ssl.create_default_context()
-with smtplib.SMTP_SSL("${{ secrets.SMTP_HOST }}", int("${{ secrets.SMTP_PORT }}"), context=context) as smtp:
-    smtp.login("${{ secrets.SMTP_USER }}", "${{ secrets.SMTP_PASSWORD }}")
-    smtp.send_message(msg)
-EOF
-
-          python3 send_report.py
+          python3 send_email.py
