--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -45,7 +45,7 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           version: latest
-          image-ref: "${{ steps.vars.outputs.tag }}"
+          image-ref: ${{ steps.vars.outputs.tag }}
           format: 'json'
           output: 'trivy-report.json'
           ignore-unfixed: true
