--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,6 +5,10 @@ on:
     branches: [main]
   pull_request:
 
+env:
+  REPO_LOWER: $(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+  IMAGE: "ghcr.io/${REPO_LOWER}:latest"
+
 jobs:
   build-and-scan:
     runs-on: ubuntu-latest
@@ -34,7 +38,7 @@ jobs:
       #  run: docker push ${{ steps.vars.outputs.tag }}
 
       - name: Echo the generated image tag
-        run: echo "Attempting to scan image tag ${{ steps.vars.outputs.tag }}"
+        run: echo "Attempting to scan image $IMAGE"
 
       - name: Install Trivy
         uses: aquasecurity/trivy-action@0.30.0
@@ -43,7 +47,7 @@ jobs:
 
       - name: Run Trivy vulnerability scanner and save JSON report
         #uses: aquasecurity/trivy-action@0.30.0
-        run: trivy image --format json -o trivy-report.json --ignore-unfixed --vuln-type os,library --severity CRITICAL,HIGH ${{ steps.vars.outputs.tag }}
+        run: trivy image --format json -o trivy-report.json --ignore-unfixed --vuln-type os,library --severity CRITICAL,HIGH $IMAGE
         #with:
         #  version: latest
         #  image-ref: ${{ steps.vars.outputs.tag }}
