--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   REPO_LOWER: $(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
-  IMAGE: "ghcr.io/${REPO_LOWER}:latest"
+  INPUT_IMAGE_REF: ghcr.io/${REPO_LOWER}:latest
 
 jobs:
   build-and-scan:
@@ -38,7 +38,7 @@ jobs:
       #  run: docker push ${{ steps.vars.outputs.tag }}
 
       - name: Echo the generated image tag
-        run: echo "Attempting to scan image $IMAGE"
+        run: echo "Attempting to scan image ${INPUT_IMAGE_REF}"
 
       - name: Install Trivy
         uses: aquasecurity/trivy-action@0.30.0
@@ -47,7 +47,7 @@ jobs:
 
       - name: Run Trivy vulnerability scanner and save JSON report
         #uses: aquasecurity/trivy-action@0.30.0
-        run: trivy image --format json -o trivy-report.json --ignore-unfixed --vuln-type os,library --severity CRITICAL,HIGH $IMAGE
+        run: trivy image --format json -o trivy-report.json --ignore-unfixed --vuln-type os,library --severity CRITICAL,HIGH $INPUT_IMAGE_REF
         #with:
         #  version: latest
         #  image-ref: ${{ steps.vars.outputs.tag }}
