--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,10 +5,6 @@ on:
     branches: [main]
   pull_request:
 
-env:
-  REPO_LOWER: $(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
-  INPUT_IMAGE_REF: ghcr.io/$REPO_LOWER:latest
-
 jobs:
   build-and-scan:
     runs-on: ubuntu-latest
@@ -45,7 +41,7 @@ jobs:
         #run: trivy image --format json -o trivy-report.json --ignore-unfixed --vuln-type os,library --severity CRITICAL,HIGH $INPUT_IMAGE_REF
         with:
           version: latest
-          image-ref: $INPUT_IMAGE_REF
+          #image-ref: $INPUT_IMAGE_REF
           format: 'json'
           output: 'trivy-report.json'
           ignore-unfixed: true
