--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -53,8 +53,11 @@ jobs:
       #- name: Scan image with Trivy and save JSON report
       #  run: trivy image --format json -o trivy-report.json ${{ steps.vars.outputs.tag }}
 
+      - name: Get the trivy HTML template
+        run: wget https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/html.tpl
+
       - name: Generate HTML report from JSON
-        run: trivy convert --format template --template "@/contrib/html.tpl" -o trivy-report.html trivy-report.json
+        run: trivy convert --format template --template "@$GITHUB_WORKSPACE/html.tpl" -o trivy-report.html trivy-report.json
         #run: trivy image --input trivy-report.json --format template --template "@/contrib/html.tpl" -o trivy-report.html
 
       - name: Fail if critical/high vulnerabilities found
