--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -1,20 +1,26 @@
 name: Build and Scan Docker Image
 
 on:
-  push:
-    branches: [main]
-  pull_request:
+  #push:
+  #  branches: [master]
+  #pull_request:
   workflow_dispatch: # Permette di avviare il workflow manualmente dalla UI di GitHub
 
 jobs:
   build-and-scan:
     secrets: inherit
-    uses: Neomediatech/docker-images-scan-reports/.github/workflows/build-and-scan-docker-image.yml@main
+    uses: Neomediatech/gh-workflows/.github/workflows/build-and-scan-docker-image.yml@main
+    with:
+      dockerfile: "Dockerfile"
+      dockerdir: "."
+      dockertag: "latest"
 
   push-report-to-repo:
     needs: [build-and-scan]
     secrets: inherit
-    uses: Neomediatech/docker-images-scan-reports/.github/workflows/copy-file-to-another-repo.yml@main
+    uses: Neomediatech/gh-workflows/.github/workflows/copy-file-to-another-repo.yml@main
     with:
       file_id: ${{ needs.build-and-scan.outputs.uploaded-file-id }}
       filename: ${{ needs.build-and-scan.outputs.file_to_copy_output }}
+      dockertag: "latest"
+
