--- a/Dockerfile.3.3
+++ b/Dockerfile.3.3
@@ -1,10 +1,13 @@
+ARG STICKY_VERSION=3.3
 FROM debian:bookworm
 
-ENV DEBIAN_FRONTEND=noninteractive \
+ENV APP_VERSION=3.3 \
+    DEBIAN_FRONTEND=noninteractive \
     REPO=pbs-docker \
     IMAGE=pbs
 
 LABEL maintainer="docker-dario@neomediatech.it" \ 
+      org.label-schema.version=$APP_VERSION \
       org.label-schema.vcs-type=Git \
       org.label-schema.vcs-url=https://github.com/Neomediatech/${REPO} \
       org.label-schema.maintainer=Neomediatech
@@ -24,7 +27,7 @@ RUN wget https://enterprise.proxmox.com/debian/proxmox-release-bookworm.gpg -O /
 
 # install PBS
 RUN apt-get update && \
-    apt-get install -y -V --no-install-recommends proxmox-backup-server && \
+    apt-get install -y -V --no-install-recommends proxmox-backup-server=3.3.7-1 proxmox-backup-docs=3.3.7-1 && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/proxmox-backup* /etc/apt/sources.list.d/pbs-enterprise.list
 
